--- a/style.css
+++ b/style.css
@@ -34,4 +34,64 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-image: linear-gradient(to right, rgb(255, 169, 122) , rgb(255, 141, 118));
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 8px 8px 40px;
+  flex-direction: column;
+  border: 2px solid#481e1e;
+  margin: 8rem;
+  border-radius: 2rem;
+  width: 400px;
+  background-color: #ffe8e2;
+  padding: 20px;
+}
+
+/* i literally cannot get this image to just fit the screen!!!*/
+.flex-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 300px;
+}
+
+.img {
+  background-size: cover;
+  object-fit: cover;
+  height: 275px;
+  width: 400px;
+  border-top-right-radius: 2rem;
+  border-top-left-radius: 2rem;
+}
+
+/*main body text stuff + button*/
+p {
+  font-size: 1rem;
+  color: #2a0e0e;
+}
+h1 {
+  font-size: 0.75rem;
+  color: rgb(128, 78, 78);
+}
+h2 {
+  font-size: 2rem;
+  color: rgb(66, 27, 27);
+}
+h3 {
+  font-size: 4rem;
+  color: rgb(95, 62, 62);
+}
+.button {
+  font-size: 2rem;
+  color: rgb(244, 224, 224);
+  background-color: rgb(95, 62, 62);
+  box-shadow: 3px 3px 8px;
+  border-top-right-radius: 2rem;
+  border-top-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  border-bottom-left-radius: 2rem;
 }
